--- a/week1/CMakeLists.txt
+++ b/week1/CMakeLists.txt
@@ -2,6 +2,8 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
+find_package(Qt5 COMPONENTS Widgets)
+
 find_package(OpenCV REQUIRED)
 
 add_executable(test_affine_transformation test_affine_transformation.cc)
