--- a/week3/CMakeLists.txt
+++ b/week3/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(example_inverse example_inverse.cc)
 target_link_libraries(example_inverse ${OpenCV_LIBS})
 target_include_directories(example_inverse PRIVATE ${OpenCV_INCLUDE_DIRS})
+
+add_executable(custom_equalize custom_equalize/custom_equalize.cc custom_equalize/main_custom_equalize.cc)
+target_link_libraries(custom_equalize ${OpenCV_LIBS})
+target_include_directories(custom_equalize PRIVATE ${OpenCV_INCLUDE_DIRS})
